// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`文字排版 快照测试 基本文字排版 1`] = `
<h3
  className="sc-bdnylx jhSpwZ sinoui-typography sinoui-typography--h3"
  color="textPrimary"
  type="h3"
>
  H3
</h3>
`;

exports[`文字排版 快照测试 设置属性 1`] = `
Array [
  <h2
    className="sc-bdnylx jhSpwZ sinoui-typography sinoui-typography--h3"
    color="textPrimary"
    type="h3"
  >
    H3
  </h2>,
  <h3
    className="sc-bdnylx knoihF sinoui-typography sinoui-typography--h3"
    color="textPrimary"
    type="h3"
  >
    H3
  </h3>,
  <h3
    className="sc-bdnylx IpjvA sinoui-typography sinoui-typography--h3"
    color="textPrimary"
    type="h3"
  >
    H3
  </h3>,
  <h3
    className="sc-bdnylx gBqeNl sinoui-typography sinoui-typography--h3"
    color="success"
    type="h3"
  >
    H3
  </h3>,
  <h3
    className="sc-bdnylx cJa-DCl sinoui-typography sinoui-typography--h3 sinoui-typography--gutter-bottom"
    color="textPrimary"
    type="h3"
  >
    H3
  </h3>,
]
`;

exports[`文字排版 快照测试 颜色设置 1`] = `
Array [
  <h3
    className="sc-bdnylx jhSpwZ sinoui-typography sinoui-typography--h3"
    color="textPrimary"
    type="h3"
  >
    H3
  </h3>,
  <h3
    className="sc-bdnylx iyETCK sinoui-typography sinoui-typography--h3"
    color="primary"
    type="h3"
  >
    H3
  </h3>,
  <h3
    className="sc-bdnylx fGVgQR sinoui-typography sinoui-typography--h3"
    color="secondary"
    type="h3"
  >
    H3
  </h3>,
  <h3
    className="sc-bdnylx jhSpwZ sinoui-typography sinoui-typography--h3"
    color="textPrimary"
    type="h3"
  >
    H3
  </h3>,
  <h3
    className="sc-bdnylx cnyEYA sinoui-typography sinoui-typography--h3"
    color="textSecondary"
    type="h3"
  >
    H3
  </h3>,
  <h3
    className="sc-bdnylx kKinzU sinoui-typography sinoui-typography--h3"
    color="error"
    type="h3"
  >
    H3
  </h3>,
  <h3
    className="sc-bdnylx coGGzV sinoui-typography sinoui-typography--h3"
    color="warning"
    type="h3"
  >
    H3
  </h3>,
  <h3
    className="sc-bdnylx gBqeNl sinoui-typography sinoui-typography--h3"
    color="success"
    type="h3"
  >
    H3
  </h3>,
  <h3
    className="sc-bdnylx fcmClF sinoui-typography sinoui-typography--h3"
    color="info"
    type="h3"
  >
    H3
  </h3>,
]
`;
